<resources>
    <string name="app_name">Census 2019</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_log_in">Log In</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_id">This id is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in_error">Sign In Failed,please try again later</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your name</string>
    <string name="nav_header_subtitle">yourname@email.domain</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="household_head">Household head</string>
    <string name="id">ID</string>

    <string name="county">County</string>
    <string name="sub_county">Sub-county</string>
    <string name="town">Town</string>
    <string name="no_of_adult_children">No. of adult children</string>
    <string name="no_of_children_under_18">No. of children under 18</string>
    <string name="save_data">Save Data</string>
    <string name="phone_number">Phone Number</string>
    <string name="national_id">National ID</string>
    <string name="empty_error">Field cannot be empty</string>
    <string name="spinner_error">You must select from spinner</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="new_use_sign_in">New Use? Sign In</string>
    <string name="enter_your_national_id">Enter your National ID</string>
    <string name="voice_recorder">voice recorder</string>
    <string name="record_audio">Record Audio</string>
    <string name="audio_placeholder">Display Audio Recording text here</string>
    <string name="audio_image">audio image</string>
    <!--Spinner Spouses data-->

    <string-array name="spouses_arrays">
        <item>Number of spouses</item>
        <item>N/A</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>

    </string-array>
    <string-array name="job_positions_array">
        <item>Job Position</item>
        <item>Enumerators</item>
        <item>Village Elder</item>
        <item>Content Supervisor</item>
        <item>Coordinators</item>
        <item>Personnel Trainers</item>

    </string-array>
    <string-array name="education_level_array">
        <item>Level of Education</item>
        <item>University</item>
        <item>College/Tertiary</item>
        <item>Secondary School</item>

    </string-array>

</resources>
