<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".Activities.AgentActivity">

    <Spinner
        android:id="@+id/spinnerJobTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayoutphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
   >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/agent_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
             />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
       >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/agent_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/national_id"
             />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerEducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tet_layout_county"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/agent_county"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/county"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_layout_sub_county"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
       >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sub_county"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sub_county"
          />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/saveAgentData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save_data"
       />


</LinearLayout>